--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   --title2: #fab387;
   --title3: #f9e2af;
   --title4: #a6e3a1;
-  --paragraph: #181825;
+  --paragraph: #313244;
   --link: #cba6f7;
 }
 
@@ -15,6 +15,8 @@
 html {
   color: var(--main-text);
   background-color: var(--main-bg);
+
+  padding-inline: 2%;
 }
 
 h1 {
@@ -35,6 +37,7 @@ h4 {
 
 blockquote>p {
   background-color: var(--paragraph);
+  width: max-content;
 }
 
 a,
