--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ html {
   background-color: var(--main-bg);
 
   padding-inline: 2%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+  font-weight: bold;
 }
 
 h1 {
@@ -43,6 +46,7 @@ h4 {
 blockquote>p {
   background-color: var(--paragraph);
   width: max-content;
+  font-weight: normal;
 }
 
 img {
@@ -56,6 +60,7 @@ img {
 
 th {
   background-color: var(--th);
+
 }
 
 td {
@@ -65,6 +70,7 @@ td {
 th,
 td {
   color: var(--t-text);
+  font-weight: normal;
 }
 
 table {
@@ -75,4 +81,5 @@ a,
 a:hover,
 a:visited {
   color: var(--link);
+  text-decoration: none;
 }
