--- a/style.css
+++ b/style.css
@@ -21,9 +21,11 @@ html {
   color: var(--main-text);
   background-color: var(--main-bg);
 
-  padding-inline: 2%;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-inline: 4%;
 
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
 }
 
@@ -45,27 +47,31 @@ h4 {
 
 blockquote>p {
   background-color: var(--paragraph);
-  width: max-content;
+  width: max-content !important;
   font-weight: normal;
   border-radius: 8px;
   padding: 4px;
 }
 
-img {
-
-  width: max-content;
-  border-radius: 12px;
-  width: auto;
-  height: auto;
+figure {
+  display: flex;
+  justify-content: center;
 }
 
-h1+figure>img,
-h2+figure>img {
+
+img {
+  max-width: fit-content;
+  width: 100%;
+  height: auto;
+
+  border-radius: 12px;
+}
+
+h2+figure>img,
+h3+figure>img {
   background-color: var(--img);
   padding: 1%;
 }
-
-
 
 th {
   background-color: var(--th);
@@ -83,6 +89,7 @@ td {
 }
 
 table {
+  margin: 0 auto;
   width: fit-content !important;
 }
 
