--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ h4 {
 
 blockquote>p {
   background-color: var(--paragraph);
-  width: max-content !important;
+  width: fit-content !important;
+  max-width: max-content;
   font-weight: normal;
   border-radius: 8px;
   padding: 4px;
