olefix css et add content

--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@
   --td: #f9e2af;
   --t-text: #1e1e2e;
   --nav: #b7bdf8;
+  --span-at: #a6e3a1;
+  --span-dt: #f38ba8;
+  --span-co: #7dc4e4;
+  --span-fu: #5b9dd3;
+  --span-st: #4b7eca;
+  --span-kw: #a6e3a1;
+  --span-va: #4b7eca;
+  --code-bg:#222230;
 }
 
 /* css */
@@ -110,4 +118,38 @@ a:visited {
 nav * {
   color: var(--nav);
   font-weight: bold;
+}
+
+span.at{
+  color: var(--span-at) !important;
+}
+
+span.dt {
+  color: var(--span-dt) !important;
+}
+
+span.co {
+  color: var(--span-co) !important;
+}
+
+span.fu {
+  color: var(--span-fu) !important;
+}
+
+span.st {
+  color: var(--span-st) !important;
+}
+
+span.kw {
+  color: var(--span-kw) !important;
+}
+
+span.va {
+  color: var(--span-va) !important;
+}
+
+pre {
+  background-color: var(--code-bg);
+  border-radius: 8px;
+  padding: 2px;
 }
